admin and navigation added

--- a/src/components/cart/cart.css
+++ b/src/components/cart/cart.css
@@ -6,8 +6,24 @@
     text-decoration: none;
     border-radius: 15px;
     transition: all .3s;
+    cursor: pointer;
 }
 .checkout:hover,.checkout:focus{
+    text-decoration: none;
+    background-color: #333;
+    color: #fff;
+}
+.remove{
+    padding: 0 10px;
+    border: 1px solid #333;
+    color: #333;
+    font-size: 12px;
+    text-decoration: none;
+    border-radius: 15px;
+    transition: all .3s;
+    cursor: pointer;
+}
+.remove:hover,.remove:focus{
     text-decoration: none;
     background-color: #333;
     color: #fff;
