login register added

--- a/src/components/login/login.css
+++ b/src/components/login/login.css
@@ -66,7 +66,8 @@ body {
   }
   .form_wrapper .input_field {
     position: relative;
-    margin-bottom: 20px;
+    margin-bottom: 0;
+    margin-top: 20px;
     -webkit-animation: bounce 0.6s ease-out;
     animation: bounce 0.6s ease-out;
   }
@@ -82,6 +83,9 @@ body {
   }
   .form_wrapper .input_field > span > i {
     padding-top: 10px;
+  }
+  .srv-validation-message{
+    color: #ff0000 !important;
   }
   .form_wrapper .textarea_field > span > i {
     padding-top: 10px;
