--- a/src/components/register/register.css
+++ b/src/components/register/register.css
@@ -35,6 +35,9 @@ body {
     animation: expand 0.8s 0.6s ease-out forwards;
     opacity: 0;
   }
+  .no_border{
+    border: none !important;
+  }
   .form_wrapper h2 {
     font-size: 1.5em;
     line-height: 1.5em;
@@ -66,7 +69,8 @@ body {
   }
   .form_wrapper .input_field {
     position: relative;
-    margin-bottom: 20px;
+    margin-bottom: 0;
+    margin-top: 20px;
     -webkit-animation: bounce 0.6s ease-out;
     animation: bounce 0.6s ease-out;
   }
@@ -115,6 +119,7 @@ body {
     outline: none;
     cursor: pointer;
     color: #fff;
+    margin-top: 20px;
     font-size: 1.1em;
     margin-bottom: 10px;
     -webkit-transition: all 0.3s ease-in-out;
