admin and checkout tweeks

--- a/src/components/admin/admin.css
+++ b/src/components/admin/admin.css
@@ -9,3 +9,9 @@
 .activity_container ul{
     list-style-position: inside;
 }
+.album_title::after{
+    content: ',';
+}
+.album_title:last-child::after{
+    content: ''
+}
