--- a/src/components/album/album.css
+++ b/src/components/album/album.css
@@ -12,3 +12,7 @@
     background-color: #333;
     color: #fff;
 }
+.delete{
+    border-radius: 15px !important;
+    padding: 5px 10px !important;
+}
